# test-aggregator

./: .gitignore
infrastructure/: Makefile  docker-compose.yaml
infrastructure/migration/: create_database.sql  layout.sql
server/: Cargo.toml
server/src/: aggregator.rs  context.rs  enums.rs  mail.rs  main.rs  store.rs
server/src/models/: api_key.rs  mod.rs  response.rs  simulation_result.rs  user.rs
server/src/repository/: simulation_result.rs  store.rs
server/src/routes/: api_key.rs  mailer.rs  mod.rs  simulation_result.rs  user.rs
