[package]
name = "server"
version = "0.1.0"
authors = ["PumpkinSeed <qwer.kocka@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
serde = { version = "1.0", features = ["derive"] }
postgres = "0.17.4"
validator = "0.10"
validator_derive = "0.10"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json"]
