[package]
name = "server"
version = "0.1.0"
authors = ["PumpkinSeed <qwer.kocka@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.106"
serde_json = "1.0.51"

postgres = {version = "0.17.4", features = ["with-chrono-0_4"]}
postgres-types = "0.1.2"
postgres-protocol = "*"
simplestore = "0.0.4"

validator = "0.10"
validator_derive = "0.10"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
bcrypt = "0.8.1"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json"]

[dependencies.chrono]
version = "*"
features = ["rustc-serialize", "serde"]
